--- a/tikoplanner/package.json
+++ b/tikoplanner/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.13.4",
     "bootstrap": "^5.3.8",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.563.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-icons": "^5.5.0",
